Tiny simplification